create basic html structure

--- a/index.html
+++ b/index.html
@@ -10,8 +10,34 @@
 
 <body>
     <header>
-        <h1>Vanessa Correia</h1>
+        <h1>
+            <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Vanessa Correia</a>
+        </h1>
     </header>
+
+    <main>
+        <section class="hello-world">
+            <h2>Hello World!</h2>
+        </section>
+
+        <section class="projects">
+            <h2>Projects</h2>
+        </section>
+
+        <section class="skills">
+            <h2>Skills</h2>
+        </section>
+
+        <section class="contacts">
+            <h2>Contacts</h2>
+        </section>
+
+    </main>
+
+    <footer>
+        <h4>&copy; <a href="https://github.com/" target="_blank"> vcdsc</a> 2022</h4>
+    </footer>
+
 </body>
 
 </html>
