--- a/index.html
+++ b/index.html
@@ -5,31 +5,112 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Vanessa Correia</title>
 </head>
 
 <body>
     <header>
-        <h1>
-            <a href="https://github.com/" target="_blank" rel="noopener noreferrer">Vanessa Correia</a>
-        </h1>
+
+        <!-- Navbar Start -->
+        <nav class="navbar navbar-dark bg-dark fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="https://github.com/" target="_blank">
+                    <img src="/images/vcdsc.png" alt="" width="30" height="30"
+                        class="d-inline-block align-text-top logo">
+                    Vanessa Correia
+                </a>
+                <div>
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#hello-world">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#projects">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#skills">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contacts">Contacts</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Navbar End -->
+
     </header>
 
     <main>
-        <section class="hello-world">
+        <section class="hello-world" id="hello-world">
             <h2>Hello World!</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce viverra quam mauris, vel fringilla neque
+                posuere eu. Ut
+                ut facilisis tellus. Sed in pharetra mauris, condimentum bibendum purus. Fusce sem odio, tempus at eros
+                ac, fermentum
+                ultricies ipsum. Fusce lobortis purus placerat nulla dictum, sit amet malesuada nunc vulputate. Vivamus
+                sodales porta
+                dapibus. Praesent viverra mauris eget augue mattis, et consectetur sem mollis. Curabitur tristique
+                egestas nulla ac
+                consectetur. Aenean rutrum pretium dui, suscipit porta lectus tempor eu. Phasellus arcu sapien, eleifend
+                ut malesuada
+                non, ultrices in lectus. Nulla faucibus vestibulum arcu a maximus. Fusce egestas mauris mauris, ut
+                feugiat enim porta a.
+                Praesent dictum lacinia lectus. Donec a efficitur tortor.</p>
         </section>
 
-        <section class="projects">
+        <section class="projects" id="projects">
             <h2>Projects</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce viverra quam mauris, vel fringilla neque
+                posuere eu. Ut
+                ut facilisis tellus. Sed in pharetra mauris, condimentum bibendum purus. Fusce sem odio, tempus at eros
+                ac, fermentum
+                ultricies ipsum. Fusce lobortis purus placerat nulla dictum, sit amet malesuada nunc vulputate. Vivamus
+                sodales porta
+                dapibus. Praesent viverra mauris eget augue mattis, et consectetur sem mollis. Curabitur tristique
+                egestas nulla ac
+                consectetur. Aenean rutrum pretium dui, suscipit porta lectus tempor eu. Phasellus arcu sapien, eleifend
+                ut malesuada
+                non, ultrices in lectus. Nulla faucibus vestibulum arcu a maximus. Fusce egestas mauris mauris, ut
+                feugiat enim porta a.
+                Praesent dictum lacinia lectus. Donec a efficitur tortor.</p>
         </section>
 
-        <section class="skills">
+        <section class="skills" id="skills">
             <h2>Skills</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce viverra quam mauris, vel fringilla neque
+                posuere eu. Ut
+                ut facilisis tellus. Sed in pharetra mauris, condimentum bibendum purus. Fusce sem odio, tempus at eros
+                ac, fermentum
+                ultricies ipsum. Fusce lobortis purus placerat nulla dictum, sit amet malesuada nunc vulputate. Vivamus
+                sodales porta
+                dapibus. Praesent viverra mauris eget augue mattis, et consectetur sem mollis. Curabitur tristique
+                egestas nulla ac
+                consectetur. Aenean rutrum pretium dui, suscipit porta lectus tempor eu. Phasellus arcu sapien, eleifend
+                ut malesuada
+                non, ultrices in lectus. Nulla faucibus vestibulum arcu a maximus. Fusce egestas mauris mauris, ut
+                feugiat enim porta a.
+                Praesent dictum lacinia lectus. Donec a efficitur tortor.</p>
         </section>
 
-        <section class="contacts">
+        <section class="contacts" id="contacts">
             <h2>Contacts</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce viverra quam mauris, vel fringilla neque
+                posuere eu. Ut
+                ut facilisis tellus. Sed in pharetra mauris, condimentum bibendum purus. Fusce sem odio, tempus at eros
+                ac, fermentum
+                ultricies ipsum. Fusce lobortis purus placerat nulla dictum, sit amet malesuada nunc vulputate. Vivamus
+                sodales porta
+                dapibus. Praesent viverra mauris eget augue mattis, et consectetur sem mollis. Curabitur tristique
+                egestas nulla ac
+                consectetur. Aenean rutrum pretium dui, suscipit porta lectus tempor eu. Phasellus arcu sapien, eleifend
+                ut malesuada
+                non, ultrices in lectus. Nulla faucibus vestibulum arcu a maximus. Fusce egestas mauris mauris, ut
+                feugiat enim porta a.
+                Praesent dictum lacinia lectus. Donec a efficitur tortor.</p>
         </section>
 
     </main>
@@ -38,6 +119,9 @@
         <h4>&copy; <a href="https://github.com/" target="_blank"> vcdsc</a> 2022</h4>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
