align logo and name in navbar to centre

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
         <!-- Navbar Start -->
         <nav class="navbar navbar-dark bg-dark fixed-top">
-            <div class="container-fluid">
+            <div class="container-fluid navbar-logo">
                 <a class="navbar-brand" href="https://github.com/" target="_blank">
-                    <img src="/images/vcdsc.png" alt="" width="30" height="30"
-                        class="d-inline-block align-text-top logo">
-                    Vanessa Correia
+                    <img src="/images/vcdsc.png" alt="" width="60" height="60"
+                        class="d-inline-block align-text-top navbar-logo">
+                    <span> Vanessa Correia</span>
                 </a>
                 <div>
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
