--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 <a class="navbar-brand" href="https://github.com/" target="_blank">
                     <img src="/images/vcdsc.png" alt="" width="60" height="60"
                         class="d-inline-block align-text-top navbar-logo">
-                    <span> Vanessa Correia</span>
+                    <span>Vanessa Correia</span>
                 </a>
                 <div>
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#hello-world">About</a>
+                            <a class="nav-link" aria-current="page" href="#hello-world">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#projects">Projects</a>
@@ -116,7 +116,9 @@
     </main>
 
     <footer>
-        <h4>&copy; <a href="https://github.com/" target="_blank"> vcdsc</a> 2022</h4>
+        <div class="bg-dark fixed-bottom">
+            <h4><a href="https://github.com/" target="_blank">&copy; vcdsc 2022</a></h4>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
