--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
         <!-- Navbar Start -->
         <nav class="navbar navbar-dark bg-dark fixed-top">
-            <div class="container-fluid navbar-logo">
+            <div class="container-fluid">
                 <a class="navbar-brand" href="https://github.com/" target="_blank">
-                    <img src="/images/vcdsc.png" alt="" width="60" height="60"
-                        class="d-inline-block align-text-top navbar-logo">
+                    <img src="/images/vcdsc.png" alt="woman sitting at a desk, facing a computer monitor" width="30"
+                        height="30" class="d-inline-block align-text-top navbar-logo">
                     <span>Vanessa Correia</span>
                 </a>
                 <div>
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#hello-world">About</a>
+                        <li class="nav-item ">
+                            <a class="nav-link" href="#hello-world">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#projects">Projects</a>
@@ -45,85 +45,140 @@
     </header>
 
     <main>
+
+        <!-- Hero Start -->
         <section class="hello-world" id="hello-world">
-            <h2>Hello World!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce viverra quam mauris, vel fringilla neque
-                posuere eu. Ut
-                ut facilisis tellus. Sed in pharetra mauris, condimentum bibendum purus. Fusce sem odio, tempus at eros
-                ac, fermentum
-                ultricies ipsum. Fusce lobortis purus placerat nulla dictum, sit amet malesuada nunc vulputate. Vivamus
-                sodales porta
-                dapibus. Praesent viverra mauris eget augue mattis, et consectetur sem mollis. Curabitur tristique
-                egestas nulla ac
-                consectetur. Aenean rutrum pretium dui, suscipit porta lectus tempor eu. Phasellus arcu sapien, eleifend
-                ut malesuada
-                non, ultrices in lectus. Nulla faucibus vestibulum arcu a maximus. Fusce egestas mauris mauris, ut
-                feugiat enim porta a.
-                Praesent dictum lacinia lectus. Donec a efficitur tortor.</p>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="container-fluid">
+                    <h1 class="section-title"><code class="effect">Hello, World!</code></h1>
+                    <div class="row">
+                        <div class="col-md-auto">
+                            <img src="/images/VC.jpeg" alt="headshot of Vanessa Correia">
+                        </div>
+                        <div class="col-lg">
+                            <p class="lead">Lorem ipsum dolor sit
+                                amet, consectetur adipiscing elit. Maecenas semper est ac lacus eleifend fermentum eu
+                                sit amet
+                                augue. Praesent finibus diam sit amet metus volutpat rhoncus. Orci varius natoque
+                                penatibus et magnis dis parturient
+                                montes, nascetur ridiculus mus. Praesent vel bibendum neque. In nec tortor sit amet
+                                tellus mattis vestibulum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-- Hero End -->
 
+        <!-- Projects Start -->
         <section class="projects" id="projects">
-            <h2>Projects</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce viverra quam mauris, vel fringilla neque
-                posuere eu. Ut
-                ut facilisis tellus. Sed in pharetra mauris, condimentum bibendum purus. Fusce sem odio, tempus at eros
-                ac, fermentum
-                ultricies ipsum. Fusce lobortis purus placerat nulla dictum, sit amet malesuada nunc vulputate. Vivamus
-                sodales porta
-                dapibus. Praesent viverra mauris eget augue mattis, et consectetur sem mollis. Curabitur tristique
-                egestas nulla ac
-                consectetur. Aenean rutrum pretium dui, suscipit porta lectus tempor eu. Phasellus arcu sapien, eleifend
-                ut malesuada
-                non, ultrices in lectus. Nulla faucibus vestibulum arcu a maximus. Fusce egestas mauris mauris, ut
-                feugiat enim porta a.
-                Praesent dictum lacinia lectus. Donec a efficitur tortor.</p>
-        </section>
+            <div class="container-fluid">
+                <h2 class="section-title">Projects</h2>
+                <div class="row">
 
-        <section class="skills" id="skills">
-            <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce viverra quam mauris, vel fringilla neque
-                posuere eu. Ut
-                ut facilisis tellus. Sed in pharetra mauris, condimentum bibendum purus. Fusce sem odio, tempus at eros
-                ac, fermentum
-                ultricies ipsum. Fusce lobortis purus placerat nulla dictum, sit amet malesuada nunc vulputate. Vivamus
-                sodales porta
-                dapibus. Praesent viverra mauris eget augue mattis, et consectetur sem mollis. Curabitur tristique
-                egestas nulla ac
-                consectetur. Aenean rutrum pretium dui, suscipit porta lectus tempor eu. Phasellus arcu sapien, eleifend
-                ut malesuada
-                non, ultrices in lectus. Nulla faucibus vestibulum arcu a maximus. Fusce egestas mauris mauris, ut
-                feugiat enim porta a.
-                Praesent dictum lacinia lectus. Donec a efficitur tortor.</p>
+                    <!-- Card 1 Start-->
+                    <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+                        <div class="card">
+                            <img src="./images/projects_prework.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Project #</h3>
+                                <p class="card-text">Project Description
+                                </p>
+                                <a href="https://github.com/" target="_blank" class="btn btn-dark">Code</a>
+                                <a href="https://github.com/" target="_blank" class="btn btn-dark">Live</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card 1 End -->
+
+                    <!-- Card 2 Start-->
+                    <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+                        <div class="card">
+                            <img src="./images/projects_horiseon-refactor.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Project #</h3>
+                                <p class="card-text">Project Description
+                                </p>
+                                <a href="https://github.com/" target="_blank" class="btn btn-dark">Code</a>
+                                <a href="https://github.com/" target="_blank" class="btn btn-dark">Live</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card 2 End -->
+
+
+                    <!-- Card 3 Start-->
+                    <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
+                        <div class="card">
+                            <img src="./images/projects_responsive-portfolio.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h3 class="card-title">Project #</h3>
+                                <p class="card-text">Project Description
+                                </p>
+                                <a href="https://github.com/" target="_blank" class="btn btn-dark">Code</a>
+                                <a href="https://github.com/" target="_blank" class="btn btn-dark">Live</a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card 3 End -->
+
+                </div>
+            </div>
         </section>
+        <!-- Projects End -->
+
+        <!-- SKills Start -->
+        <section class="skills" id="skills">
+            <div class="container-fluid">
+
+                <h2 class="section-title">Skills</h2>
+
+                <p class="skills-tags">HTML</p>
+                <div class="container">
+                    <div class="skills-bar html">80%</div>
+                </div>
+
+                <p class="skills-tags">CSS</p>
+                <div class="container">
+                    <div class="skills-bar css">60%</div>
+                </div>
+
+                <p class="skills-tags">JavaScript</p>
+                <div class="container">
+                    <div class="skills-bar js">5%</div>
+                </div>
+
+            </div>
+        </section>
+        <!-- Skills End -->
 
         <section class="contacts" id="contacts">
-            <h2>Contacts</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce viverra quam mauris, vel fringilla neque
-                posuere eu. Ut
-                ut facilisis tellus. Sed in pharetra mauris, condimentum bibendum purus. Fusce sem odio, tempus at eros
-                ac, fermentum
-                ultricies ipsum. Fusce lobortis purus placerat nulla dictum, sit amet malesuada nunc vulputate. Vivamus
-                sodales porta
-                dapibus. Praesent viverra mauris eget augue mattis, et consectetur sem mollis. Curabitur tristique
-                egestas nulla ac
-                consectetur. Aenean rutrum pretium dui, suscipit porta lectus tempor eu. Phasellus arcu sapien, eleifend
-                ut malesuada
-                non, ultrices in lectus. Nulla faucibus vestibulum arcu a maximus. Fusce egestas mauris mauris, ut
-                feugiat enim porta a.
-                Praesent dictum lacinia lectus. Donec a efficitur tortor.</p>
-        </section>
+            <div class="container-fluid">
+                <h2 class="section-title">Contacts</h2>
+                <a href="https://github.com/" target="_blank"><i class="fa fa-github-alt"></i></a>
+                <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+                <a href="https://dev.to/" target="_blank"><i class="fa fa-pencil-square"></i></a>
+                <a href="https://" target="_blank"><i class="fa fa-envelope"></i></a>
 
+            </div>
+        </section>
     </main>
 
+    <!-- Footer Start -->
     <footer>
         <div class="bg-dark fixed-bottom">
-            <h4><a href="https://github.com/" target="_blank">&copy; vcdsc 2022</a></h4>
+            <div class="container-fluid">
+                <h4><a href="https://github.com/" target="_blank">&copy; vcdsc 2022</a></h4>
+            </div>
         </div>
     </footer>
+    <!-- Footer End -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
+    <script src="https://use.fontawesome.com/501eed7caf.js"></script>
 </body>
 
 </html>
