correct path to logo and headshot img

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-dark bg-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="https://github.com/" target="_blank">
-                    <img src="/images/vcdsc.png" alt="woman sitting at a desk, facing a computer monitor" width="30"
+                    <img src="./images/vcdsc.png" alt="woman sitting at a desk, facing a computer monitor" width="30"
                         height="30" class="d-inline-block align-text-top navbar-logo">
                     <span>Vanessa Correia</span>
                 </a>
@@ -53,7 +53,7 @@
                     <h1 class="section-title"><code class="effect">Hello, World!</code></h1>
                     <div class="row">
                         <div class="col-md-auto">
-                            <img src="/images/VC.jpeg" alt="headshot of Vanessa Correia">
+                            <img src="./images/VC.jpeg" alt="headshot of Vanessa Correia">
                         </div>
                         <div class="col-lg">
                             <p class="lead">Lorem ipsum dolor sit
@@ -80,7 +80,7 @@
                     <!-- Card 1 Start-->
                     <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                         <div class="card">
-                            <img src="./images/projects_prework.png" class="card-img-top" alt="...">
+                            <img src="./images/projects_prework.png" class="card-img-top" alt="screenshot of project">
                             <div class="card-body">
                                 <h3 class="card-title">Project #</h3>
                                 <p class="card-text">Project Description
@@ -95,7 +95,8 @@
                     <!-- Card 2 Start-->
                     <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                         <div class="card">
-                            <img src="./images/projects_horiseon-refactor.png" class="card-img-top" alt="...">
+                            <img src="./images/projects_horiseon-refactor.png" class="card-img-top"
+                                alt="screenshot of project">
                             <div class="card-body">
                                 <h3 class="card-title">Project #</h3>
                                 <p class="card-text">Project Description
@@ -111,7 +112,8 @@
                     <!-- Card 3 Start-->
                     <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                         <div class="card">
-                            <img src="./images/projects_responsive-portfolio.png" class="card-img-top" alt="...">
+                            <img src="./images/projects_responsive-portfolio.png" class="card-img-top"
+                                alt="screenshot of project">
                             <div class="card-body">
                                 <h3 class="card-title">Project #</h3>
                                 <p class="card-text">Project Description
