adjust hello-world text alignment to center of column

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="col-md-auto">
                             <img src="./images/VC.jpeg" alt="headshot of Vanessa Correia">
                         </div>
-                        <div class="col-lg">
+                        <div class="col-lg d-flex align-items-center justify-content-center">
                             <p class="lead">Lorem ipsum dolor sit
                                 amet, consectetur adipiscing elit. Maecenas semper est ac lacus eleifend fermentum eu
                                 sit amet
