add final style changes

--- a/index.html
+++ b/index.html
@@ -73,14 +73,15 @@
 
         <!-- Projects Start -->
         <section class="projects" id="projects">
-            <div class="container-fluid">
+            <div class="container-fluid content">
                 <h1 class="section-title">Projects</h1>
-                <div class="row">
+                <div class="row spacing">
 
                     <!-- Card 1 Start-->
                     <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                         <div class="card">
-                            <img src="./images/projects_prework.png" class="card-img-top" alt="screenshot of project">
+                            <img src="https://placehold.co/600x400/black/white?text=1" class="card-img-top"
+                                alt="screenshot of project">
                             <div class="card-body">
                                 <h3 class="card-title">Project #</h3>
                                 <p class="card-text">Project Description
@@ -95,7 +96,7 @@
                     <!-- Card 2 Start-->
                     <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                         <div class="card">
-                            <img src="./images/projects_horiseon-refactor.png" class="card-img-top"
+                            <img src="https://placehold.co/600x400/black/white?text=2" class="card-img-top"
                                 alt="screenshot of project">
                             <div class="card-body">
                                 <h3 class="card-title">Project #</h3>
@@ -112,7 +113,7 @@
                     <!-- Card 3 Start-->
                     <div class="cardContainer col-lg-4 col-md-4 col-sm-12">
                         <div class="card">
-                            <img src="./images/projects_responsive-portfolio.png" class="card-img-top"
+                            <img src="https://placehold.co/600x400/black/white?text=3" class="card-img-top"
                                 alt="screenshot of project">
                             <div class="card-body">
                                 <h3 class="card-title">Project #</h3>
@@ -168,11 +169,9 @@
     </main>
 
     <!-- Footer Start -->
-    <footer>
-        <div class="bg-dark fixed-bottom">
-            <div class="container-fluid">
-                <h4><a href="https://github.com/" target="_blank">&copy; vcdsc 2023</a></h4>
-            </div>
+    <footer class="bg-dark">
+        <div class="container-fluid text-center">
+            <p>&copy; <a href=" https://github.com/" target="_blank">vcdsc</a>2023</p>
         </div>
     </footer>
     <!-- Footer End -->
